v9 Phase A+B: GUI map foundation and drawing tools - Add gui module with MapWindow and FieldSelector - Show ESRI basemap, add controls (Rectangle/Circle, Analyze, Clear) - Enforce single active selection, reset on tool switch - Restore MapWindow.show() - Update tests (map + selector) – all passing - Update requirements (matplotlib, contextily, pyproj) - Update v9_roadmap.md to mark Phase A & B tasks complete

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-requests
+requests>=2.25.0
 rasterio
-numpy
-matplotlib
+numpy>=1.21.0
+matplotlib>=3.5.0
 pystac
-contextily
+pystac-client>=0.5.0
+contextily>=1.2.0
 requests-cache
 shapely>=2.0.0
-pyproj
+pyproj>=3.0.0
